--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</tr>
 				<tr>
 					<td class="left">Interests</td>
-					<td class="right">Programming, Music, Gaming, Coffee, Speedcubing, Hiking, Drawing, Reading</td>
+					<td class="right">Programming, Music, Gaming,<br/> Coffee, Speedcubing, Reading</td>
 				</tr>
 				<tr><td></td></tr>
 				<tr>
