--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 					<td class="left">Interests</td>
 					<td class="right">Programming, Music, Gaming,<br/> Coffee, Speedcubing, Reading</td>
 				</tr>
+				<tr>
+					<td class="left">Resume</td>
+					<td class="right"><a id="resume" href="Resume.pdf">Click to download</a></td>
+				</tr>
 				<tr><td></td></tr>
 				<tr>
 					<td class="label" colspan="2">Contact</td>
