--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 	<script>
 		redirects = {
 			"btn_graphi_src": "https://github.com/mxm07/graphi.git",
-			"btn_graphi_demo": "./graphi",
+			"btn_graphi_demo": "graphi/index.html",
 			"btn_pathfind_src": "https://github.com/mxm07/pathfind",
-			"btn_pathfind_demo": "./pathfind_demo",
+			"btn_pathfind_demo": "pathfind_demo/index.html",
 			"btn_overgrowth_src": "https://github.com/mxm07/overgrowth",
-			"btn_overgrowth_demo": "./overgrowth_demo",
+			"btn_overgrowth_demo": "overgrowth_demo/index.html",
 			"btn_jstacker_src": "https://github.com/mxm07/jstacker",
-			"btn_jstacker_demo": "./jstacker/index.html",
+			"btn_jstacker_demo": "jstacker/index.html",
 			
 		}
 
