fix header not following, minor change to content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</tr>
 				<tr>
 					<td class="left">Interests</td>
-					<td class="right">Programming, Music, Gaming,<br/> Coffee, Speedcubing, Reading</td>
+					<td class="right">Programming, Music, Gaming,<br/>Speedcubing, Reading, Cryptocurrency</td>
 				</tr>
 				<tr>
 					<td class="left">Resume</td>
