--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</div>
 				<p><strong>graphi</strong> is a javascript-based graph visualization software. Planned features include easy graph creation and management, graph traversal, visualization of various trees (red-black trees, B-trees, etc.), and much more. (WIP)</p>
 				<div class="btn_wrapper">
-					<button id="btn_graphi_src">
+					<!--<button id="btn_graphi_src">
 						<img src="images/codeicon.png">
-					</button>
+					</button>-->
 					<button id="btn_graphi_demo">
 						<img src="images/eyeicon.png">
 					</button>
@@ -109,9 +109,9 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</div>
 				<p><strong>pathfind</strong> is a puzzle game created in Unity3D.  The player controls a cube and has to move about the board and interact with various tiles to complete levels.  Includes 40+ levels, a fully-featured level editor, and original music. (WIP)</p>
 				<div class="btn_wrapper">
-					<button id="btn_pathfind_src">
+					<!--<button id="btn_pathfind_src">
 						<img src="images/codeicon.png">
-					</button>
+					</button>-->
 					<button id="btn_pathfind_demo"> 
 						<img src="images/eyeicon.png">
 					</button>
@@ -123,9 +123,9 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</div>
 				<p><strong>overgrowth</strong> is an arcade-style game created in Unity3D for a 72-hour Game Jam.  The goal of the game is to contain the spread of weeds using walls.</p>
 				<div class="btn_wrapper">
-					<button id="btn_overgrowth_src">
+					<!--button id="btn_overgrowth_src">
 						<img src="images/codeicon.png">
-					</button>
+					</button>-->
 					<button id="btn_overgrowth_demo"> 
 						<img src="images/eyeicon.png">
 					</button>
@@ -137,9 +137,9 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 				</div>
 				<p><strong>jstacker</strong> is a simple arcade-style stacking game written in javascript. See how high you can stack!</p>
 				<div class="btn_wrapper">
-					<button id="btn_jstacker_src">
+					<!--<button id="btn_jstacker_src">
 						<img src="images/codeicon.png">
-					</button>
+					</button>-->
 					<button id="btn_jstacker_demo"> 
 						<img src="images/eyeicon.png">
 					</button>
@@ -159,13 +159,13 @@ Welcome to my portfolio website. My name is Max Melo, and I am a programmer and 
 	</body>
 	<script>
 		redirects = {
-			"btn_graphi_src": "https://github.com/mxm07/graphi.git",
+			//"btn_graphi_src": "https://github.com/mxm07/graphi.git",
 			"btn_graphi_demo": "graphi/index.html",
-			"btn_pathfind_src": "https://github.com/mxm07/pathfind",
+			//"btn_pathfind_src": "https://github.com/mxm07/pathfind",
 			"btn_pathfind_demo": "pathfind_demo/index.html",
-			"btn_overgrowth_src": "https://github.com/mxm07/overgrowth",
+			//"btn_overgrowth_src": "https://github.com/mxm07/overgrowth",
 			"btn_overgrowth_demo": "overgrowth_demo/index.html",
-			"btn_jstacker_src": "https://github.com/mxm07/jstacker",
+			//"btn_jstacker_src": "https://github.com/mxm07/jstacker",
 			"btn_jstacker_demo": "jstacker/index.html",
 			
 		}
